[workspace]
resolver = "2"
members = [
    "packages/neociv-desktop",
    "packages/neociv-bin",
    "packages/neociv-civil",
    "packages/neociv-config",
    "packages/neociv-game",
    "packages/neociv-macros",
    "packages/neociv-state",
    "packages/neociv-db",
    "packages/neociv-engine",
    "packages/neociv-launcher"
]

